--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^2.26.4",
-    "react-scripts": "4.0.1"
+    "react-scripts": "4.0.1",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
